# Discount-journal

./: CMakeLists.txt  README.md
lib/: journal.c  journal.h  record_array_list.c  record_array_list.h  ui.c  ui.h
